--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       "./node_modules/@types"
     ],
     "baseUrl": "./",
+    "paths": {
+      "/opt/customersLayer": ["lambda/layers/customersLayer/customerRepository"],
+    }
   },
   "exclude": [
     "node_modules",
